finished 1st draft of menu

--- a/about.html
+++ b/about.html
@@ -3,15 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./menu.html">Menu</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img src="./assets/images/banner.png" alt="H-Thai-ML Banner">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>Austin, Texas</li>
+            <li>New Orleans, Louisiana</li>
+            <li>St Paul, Minnesota</li>
+            <li>Milwaukee, Wisconsin</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="./assets/images/about.jpg" alt="Spices">
+        <p>Austin, Texas is our original location because 
+           Lorem ipsum dolor sit amet, consectetur adipiscing 
+           elit, sed do eiusmod tempor incididunt ut labore et 
+           dolore magna aliqua. Pretium aenean pharetra magna 
+           ac placerat vestibulum lectus mauris ultrices. Eu sem 
+           integer vitae justo eget. Euismod in pellentesque massa 
+           placerat duis ultricies lacus. Posuere morbi leo urna molestie. 
+           Enim diam vulputate ut pharetra sit. Turpis massa tincidunt dui 
+           ut ornare lectus. Morbi blandit cursus risus at. Ante in nibh mauris 
+           cursus. Ullamcorper a lacus vestibulum sed arcu non odio euismod. Eu 
+           augue ut lectus arcu bibendum at. A cras semper auctor neque vitae 
+           tempus. Lacus sed turpis tincidunt id aliquet risus. Ut etiam sit 
+           amet nisl purus in mollis nunc sed. </p>
     </main>
 </body>
 </html>
