--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./menu.html">Menu</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img src="./assets/images/banner.png" alt="H-Thai-ML Banner">
+    </div>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +37,15 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <i class="fa fa-phone" aria-hidden="true"></i> <strong>Phone Number:</strong> (123)-456-7891
         </p>
+        <p>
+            <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Address:</strong> 123 Apple Lane, Austin, Texas Zip:73301
+        </p>
+        <p>
+            <i class="fa fa-envelope-open" aria-hidden="true"></i><strong>Customer Service Email:</strong> hthaiml@gmail.com
+        </p>
+        
     </main>
 </body>
 </html>
