added comments and went over code

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
         <img src="./assets/images/banner.png" alt="H-Thai-ML Banner">
     </div>
     <main>
+        <!--Added icons and contact info-->
         <h2>Hours of Operation</h2>
         <p>
             <strong>Monday-Friday:</strong> 11:00am-8:30pm
